# notipy

./: .env.example  .gitignore  Dockerfile.dev  Makefile  README.md  docker-compose.yaml  mailgun.py  main.py  parsing.py  parsing_plane_text.py  pyproject.toml  script.py
api/middleware/: validate_service_token.py
api/routes/v1/: event_manager.py  register_service.py
app/dtos/: event_manager.py  registration.py
app/models/: channels.py  event_manager.py  exception.py  notifications.py  service_registration.py  timestamp.py
app/repositories/: database.py  db_factory.py  event_manager.py
app/repositories/event_manager/: event_manager_factory.py  event_manager_repository.py
app/repositories/notification/: notifications_factory.py  notifications_repository.py
app/repositories/registration/: registration_factory.py  registration_repository.py
app/services/: event_manager.py  notification_manager.py  registration.py
app/validators/: notification_validator.py
database/mongodb/: database.py
database/mongodb/event_manager/: event_manager_repository.py
database/mongodb/notification_repository/: notification_repository.py
database/mongodb/service_registration/: registration.py
handy-scripts/: mailgun.py  parsing.py  parsing_plane_text.py  script.py
notifications/: email.py  sms.py
utils/: config.py  file.py  logger.py  string.py
worker/: send_notification.py
