[tool.poetry]
name = "notipy"
version = "0.0.1"
description = "multichannel notification service in fastapi"
authors = ["vsumit89 <sumit.vishwakarma@factly.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
